test/library/standard/DateTime/timezoneAwarenessMismatch.2.good
timezoneAwarenessMismatch.chpl:47: error: both dateTimes must both be either naive or aware
